<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/system_neutral1_100"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mimblu"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="?android:attr/colorFocusedHighlight"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="20sp"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="21dp"
        android:layout_marginTop="60dp"
        android:textColor="@android:color/holo_orange_dark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/what_led_you_to_mimblu_today"
        android:layout_below="@+id/title"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/help_us_find_you_the_best_selection_of_counsellors_to_choose_from"
        android:textColorHint="@android:color/darker_gray"
        android:layout_below="@id/title"
        android:layout_marginTop="49dp"
        android:layout_marginHorizontal="45dp"
        android:gravity="center"
        android:textSize="15sp"/>
    <ScrollView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/next"
        android:layout_below="@id/hint">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/symplist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            />
    </ScrollView>
    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_me_my_matches"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_alignParentBottom="true"
        android:backgroundTint="?android:attr/colorFocusedHighlight"/>
</RelativeLayout>
