<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/system_neutral1_100"
    tools:context=".Subscription">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/baseline_arrow_back_ios_24"
        android:scaleX="0.5"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/mimblu"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textColor="?android:attr/colorFocusedHighlight"
        />
    <TextView
        android:id="@+id/sh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prev"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/pick_your_plan_to_continue"
        />
    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/mimblu_is_up_to_5x_cheaper_than_in_person_therapy"
        android:layout_below="@+id/sh"
        android:layout_centerHorizontal="true"
        android:textSize="19sp"
        android:gravity="center"
        android:textColorHint="@android:color/darker_gray"/>
    <TextView
        android:id="@+id/mim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hint"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:text="@string/mimblu"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/lite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hint"
        android:layout_toRightOf="@id/mim"
        android:layout_marginTop="20dp"
        android:text="lite"
        android:textSize="18sp"
        android:textColor="?android:attr/colorFocusedHighlight"/>
    <TextView
        android:id="@+id/mimb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hint"
        android:layout_toRightOf="@id/lite"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:text="@string/mimblu"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hint"
        android:layout_toEndOf="@id/mimb"
        android:layout_marginTop="20dp"
        android:text="@string/plus"
        android:textSize="18sp"
        android:textColor="?android:attr/colorFocusedHighlight"/>
    <TextView
        android:id="@+id/mimbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hint"
        android:layout_toRightOf="@id/plus"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:text="@string/mimblu"
        android:textStyle="bold"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/live"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hint"
        android:layout_toEndOf="@id/mimbl"
        android:layout_marginTop="20dp"
        android:text="@string/live"
        android:background="?android:attr/colorFocusedHighlight"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:drawableRight="@drawable/baseline_brightness_1_24"/>
    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Text + Video"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/baseline_chat_24"
        android:drawableRight="@drawable/baseline_videocam_24"
        android:layout_below="@id/lite"
        android:layout_marginStart="20dp"/>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/subrList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"/>
    </HorizontalScrollView>
</RelativeLayout>
</layout>